--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * Caching is not yet perfect.
 * TODOs in code.
 * Validation in server. (also ensure _every_ input is checked)
+* Nicer validation / form handling on client.
 * Real login.
 * Moderation.
 * SSL
