--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 * TODOs in code.
 * Ensure _every_ input is checked on server.
 * Nicer validation / form handling on client.
-* Real login.
+* Messages.
 * Moderation.
 * SSL
 * jasmine tests?
