--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+* Fix chat log when scrolled.
+* Disable keyboard movement until movement locking is fixed.
+* Restrict movement to the boundaries of the room.
+* Friend system.
 * Nicer command validation.
 * A nicer UI.
 * Complete rules.
